# comp475-s18

./: .gitignore
final/: CMakeLists.txt  MyFilter.h  MyShader.cpp  MyShader.h  RadialGradientShader.h  TriangleGradient.h  bezier.h  color_gradient.cpp  empty_canvas.cpp  image  path_impl.cpp  seg.h  stroked_line.h  tiling.cpp  tiling.h
final/apps/: image_final.cpp
pa1/: CMakeLists.txt  empty_canvas.cpp  image
pa1/apps/: image.cpp
pa2/: CMakeLists.txt  bench  clip.h  empty_canvas.cpp  image  seg.h  tests
pa3/: CMakeLists.txt  MyShader.cpp  bench  empty_canvas.cpp  image  tests
pa3/apps/: image_pa3.cpp
pa3/include/: GMatrix.h
pa4/: CMakeLists.txt  MyShader.cpp  bench  blends.h  empty_canvas.cpp  image  seg.h  tests
pa4/apps/: image_pa4.cpp
pa5/: CMakeLists.txt  MyMatrix.cpp  bench  color_gradient.cpp  empty_canvas.cpp  image  path_impl.cpp  prelude.cpp  prelude.h  seg.h  tests
pa5/apps/: lion.inc
pa6/: .gitignore  CMakeLists.txt  bench  blends.h  empty_canvas.cpp  image  layer.h  tests  tiling.cpp
